@@ -28,6 +28,7 @@ Package org.springframework.jdbc
 * added LobRetrievalFailureException, typically wrapping an IOException thrown by stream access methods
 * added AbstractLobStreamingResultSetExtractor, offering conversion of IOException to LobRetrievalFailureException
 * added AbstractLobCreatingPreparedStatementCallback, offering convenient usage of a LobCreator for LOB updates
+* changed JdbcTemplate queryForList to return List of LinkedHashMap if version > JDK1.3 - LinkedHasMap will preserve column order
 
 Package org.springframework.mock
 * factored out JNDI mock objects from org.springframework.jndi.support (source tree) to separate mock source tree
